--- a/ToDoApp/views/todo.ejs
+++ b/ToDoApp/views/todo.ejs
@@ -18,7 +18,7 @@
 <body>
     <h1>Lista de afazeres</h1>
     <div id="todo-table">
-        <form action="" method="POST">
+        <form action="" method="POST" autocomplete="off">
             <input type="text" name="item" placeholder="Adicione novo item...">
             <button type="submit">Adicionar</button>
         </form>
