inserindo jwt/handle erros/add comentarios

--- a/NodeAuthJWT/views/signup.ejs
+++ b/NodeAuthJWT/views/signup.ejs
@@ -1,5 +1,68 @@
 <%- include('partials/header'); -%>
 
-<h2>sign up page</h2>
+<form>
+    <h3>Signup</h3>
+    <label for="email">Email</label>
+    <input type="text" name="email" required>
+    <div class="eerror"></div>
+    <label for="pass">Senha</label>
+    <input type="password" name="pass" required>
+    <div class="perror"></div>
+    <button>Cadastrar</button>
+</form>
+
+<script>
+    //recebendo dados do formulário pelo seu seletor
+    const form = document.querySelector('form');
+
+    //recebendo dados da div email pelo seu seletor
+    const emailError = document.querySelector('.eerror');
+
+    //recebendo dados da div pass pelo seu seletor
+    const passError = document.querySelector('.perror');
+
+    //dispara evento quando formulário é enviado (submit)
+    form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        //reset erros
+        emailError.textContent = '';
+        passError.textContent = '';
+
+        //get valores do formulário
+        const email = form.email.value;
+        const pass = form.pass.value;
+
+        try{
+            //resposta enviada para a rota específica
+            const res = await fetch('/signup', 
+            {
+                method: 'POST',
+                //formata em JSON a resposta da requisição
+                body: JSON.stringify({email , pass}),
+                headers: { 'Content-Type': 'application/json' }
+            });
+            
+            //data recebendo a resposta da requisição
+            const data = await res.json();
+            
+            console.log(data);
+
+            //caso erro, variáveis da condicional recebem as propriedades da var data
+            if(data.erros){
+                emailError.textContent = data.erros.email;
+                passError.textContent = data.erros.pass;
+            }
+
+            //caso true, requisição é enviada para home
+            if(data.user){
+                location.assign('/');
+            }
+            
+        }catch(err){
+            console.log(err)
+        }
+    });
+</script>
 
 <%- include('partials/footer'); -%>
